# app-wasm-rust

1.sensor/sensor/: Cargo.toml
1.sensor/sensor/src/: main.rs
2.receptor/receptor/: Cargo.toml
2.receptor/receptor/src/: main.rs
3.ui/ui/: Cargo.toml
3.ui/ui/src/: main.rs
